<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.uah.edu.miguelromeral.pruebas3.MainActivity$PlaceholderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutCifrador"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/exo2regular"
                    android:text="@string/secreto1"
                    android:textAlignment="center"
                    android:textColor="@android:color/darker_gray" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/t2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/exo2regular"
                    android:text="@string/secreto2"
                    android:textAlignment="center"
                    android:textColor="@android:color/darker_gray" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/t3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/exo2extrabold"
                    android:text="@string/secreto3"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/etSecreto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/Dark_light"
                    android:ems="10"
                    android:enabled="false"
                    android:fontFamily="@font/exo2extrabold"
                    android:hint="@string/cifrado"
                    android:inputType="textCapSentences|textMultiLine"
                    android:text="@string/secreto4"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/bCopySecreto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/Dark_light"
                    android:fontFamily="@font/exo2extrabold"
                    android:onClick="copiar_secreto"
                    android:text="@string/secreto5"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/t4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/exo2regular"
                    android:text="@string/secreto6"
                    android:textColor="@android:color/darker_gray" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>